[tool.isort]
line_length = 100
src_paths = ["services", "tests", "utils"]

[tool.poetry]
name = "TradeWiSE"
version = "0.1.0"
description = "Enhancing TWSE Investment Experience with a Python-based Chatbot, leveraging microservices architecture for financial analysis, market tracking, and timely updates."
authors = ["wildfootw <wildfootw@wildfoo.tw>", "soyccan <soyccan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.6.0"
