[tool.isort]
line_length = 100
src_paths = ["src"]

[tool.poetry]
name = "twse-crawler"
version = "0.1.0"
description = "Crawl Taiwan Stock Exchange (TWSE) data."
authors = ["wildfootw <wildfootw@wildfoo.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
apscheduler = "^3.10.4"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
